--- a/index.html
+++ b/index.html
@@ -5,6 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alguien</title>
     <link href="css/style.css" type=“text/css” rel="stylesheet" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,100..900;1,100..900&display=swap");
+
+      body {
+        background-color: #000000;
+        color: #ffffff;
+        font-family: Aleo, sans-serif;
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        width: 100vw;
+        gap: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+      }
+
+      body > h1,
+      body > h2,
+      body > h2 > a,
+      body > p {
+        margin-top: 0;
+        margin-bottom: 0;
+        width: 60%;
+      }
+
+      body > h2,
+      body > h2 > a {
+        text-decoration: none;
+        color: #686868;
+      }
+
+      body > p {
+        color: #363636;
+      }
+    </style>
   </head>
 
   <body>
