💥 Delete css file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alguien</title>
-    <link href="css/style.css" type=“text/css” rel="stylesheet" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,100..900;1,100..900&display=swap");
 
@@ -48,7 +47,7 @@
   <body>
     <h1>Alguien</h1>
     <h2><a href="https://github.com/SomebodyBlacked">SomebodyBlacked</a></h2>
-    <p>Este es un párrafo que debe mostrar algo interesante sobre nosotros</p>
+    <p>Este es un párrafo que debe mostrar algo interesante.</p>
     <script defer type="text/javascript" src="/main.js"></script>
   </body>
 </html>
